--- a/js/js_ex_04.html
+++ b/js/js_ex_04.html
@@ -20,9 +20,10 @@
     }
     console.log(sum);
 
-    for(let i=1;i<=9;i++){
+    
+    {for(let i=1;i<=9;i++)
       console.log('2*' + i + '=' + (2*i) );
-    }
+      }
   </script>
 </body>
 </html>
