--- a/js/js_ex_05.html
+++ b/js/js_ex_05.html
@@ -51,6 +51,16 @@
     x = total(1,2,3);
     console.log(x);
 
+    function aaa(){
+      if(){
+
+      }
+
+      for(){
+
+      }
+    }
+
   </script>
 </body>
 </html>
