--- a/html_css/html_ex_02.html
+++ b/html_css/html_ex_02.html
@@ -30,6 +30,11 @@
     }
     a{
       text-decoration:none;
+      color:black;
+    }
+    a:hover{
+      text-decoration:none;
+      color:hotpink;
     }
     .indent{
       text-indent:16px;
